tests/unit/evaluation/minizinc/regression/test_bug67.err_exp
test_bug67.mzn:6:
MiniZinc: flattening error: 'foo' is used in a reified context but no reified version is available
